--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -40,7 +40,7 @@
               <li class="active"> <a href="#home2">首页</a></li>
               <li> <a href="#team">交流群</a></li>
               <li> <a href="modules/filecoin/login.html">登录</a></li>
-              <li> <a href="/sys/goregist">注册</a></li>
+              <li> <a href="modules/filecoin/regist.html">注册</a></li>
             </ul>
             <!--End Navigation Menu -->
           </nav>
