增加新版css样式等,将除了注册页全部改回静态html页面

--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -285,7 +285,7 @@
           <div class="footer-link">
             商务合作： 79604722@qq.com   客服邮箱： support@ipfsun.com
           </div>
-          <div class="copyright-part mtb_10">Copyright &copy; 2018.ipfsun.com All rights reserved.</div>
+          <div class="copyright-part mtb_10">Copyright &copy; 2018.ipfsun.com All rights reserved.黑ICP备12000570-3号</div>
           <div class="social_icon">
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
