--- a/src/main/resources/views/modules/filecoin/login.html
+++ b/src/main/resources/views/modules/filecoin/login.html
@@ -110,7 +110,7 @@
 
                                     <div class="pull-left">
                                         <a href="javascript:void(0);" class="btn btn-primary mt-10 btn-corner right-15" onclick="doLoginBtn();">登录</a>
-                                        <a href="/sys/goregist" class="btn mt-10 btn-corner signup">用户注册</a>
+                                        <a href="/modules/filecoin/regist.html" class="btn mt-10 btn-corner signup">用户注册</a>
                                     </div>
 
                                 </div>
@@ -121,7 +121,7 @@
 
                 <p id="nav">
                     <a class="pull-left" href="#" title="Password Lost and Found">忘记密码</a>
-                    <a class="pull-right" href="../register/index.html" title="Sign Up">用户注册</a>
+                    <a class="pull-right" href="/modules/filecoin/regist.html" title="Sign Up">用户注册</a>
                 </p>
 
             </div>
