--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -15,8 +15,8 @@
 				<a href="#" class="fl mt10"><img src="../../filecoin/register/images/logo.png" alt="logo" /></a>
 				<nav id="navs" class="fr">
 					<a href="index.html">首页</a>
-					<a href="#" class="active">注册</a>
-					<a href="">登录</a>
+					<a href="/modules/filecoin/regist.html" class="active">注册</a>
+					<a href="/modules/filecoin/login.html">登录</a>
 				</nav>
 			</div>
 		</div>
