--- a/src/main/resources/views/modules/filecoin/pay.html
+++ b/src/main/resources/views/modules/filecoin/pay.html
@@ -167,7 +167,7 @@
                                 </a>
                             </li>
                             <li class="last">
-                                <a href="login.html">
+                                <a href="#" id="logoutBtn">
                                     <i class="fa fa-lock"></i> 退出
                                 </a>
                             </li>
