--- a/src/main/resources/views/modules/filecoin/settings.html
+++ b/src/main/resources/views/modules/filecoin/settings.html
@@ -167,7 +167,7 @@
                                 </a>
                             </li>
                             <li class="last">
-                                <a href="login.html">
+                                <a href="#" id="logoutBtn">
                                     <i class="fa fa-lock"></i> 退出
                                 </a>
                             </li>
@@ -303,7 +303,7 @@
                                                             <label class="form-label">姓名</label>
                                                                                                                        <div class="controls">
                                                                 <i class=""></i>
-                                                                <input type="text" class="form-control" name="formfield1"  value="">
+                                                                <input type="text" class="form-control" id="trueName" name="formfield1"  value="">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -322,7 +322,7 @@
                                                             <label class="form-label">手机号码 </label>
                                                                                                                         <div class="controls">
                                                                 <i class=""></i>
-                                                                <input type="text" class="form-control" name="formfield3" value="">
+                                                                <input type="text" class="form-control" id="mobilePhone" name="formfield3" value="">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -332,7 +332,7 @@
                                                           
                                                             <div class="controls">
                                                                 <i class=""></i>
-                                                                <input type="text" class="form-control" name="formfield4" value="">
+                                                                <input type="text" class="form-control" id="iccid" name="formfield4" value="">
                                                             </div>
                                                         </div>
                                                     </div>
