增加新版css样式等,将除了注册页全部改回静态html页面

--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -63,7 +63,7 @@
 				<div class="frm_control_group">
 					<label class="frm_label">邮箱</label>
 					<div class="frm_controls">
-						<input type="text" id="email" name="email" required="true" class="frm_input email" maxlength="32" value=""/>
+						<input type="text" id="email" name="email" class="frm_input email" maxlength="32" value=""/>
 						<p class="frm_tips">作为登录帐号，请填写未注册的邮箱</p>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 				<div class="frm_control_group">
 					<label class="frm_label">内测邀请码</label>
 					<div class="frm_controls">
-						<input type="text" id="vcode" name="vcode" class="frm_input email" maxlength="32" value=""/>
+						<input type="text" id="vcode" name="vcode" class="frm_input " maxlength="32" value=""/>
 						<p class="changeVerifyCode">您必须输入邀请码才能注册。如没有请加QQ群：22138062 获取。</p>
 					</div>
 				</div>
@@ -94,7 +94,7 @@
 					<div class="frm_controls verifycode">
 						<input type="text" id="captcha" name="captcha" class="frm_input verifyCode" maxlength="5"/>
 						<img id="captchaImgId" src="/captcha.jpg" alt="" />
-						<a class="changeVerifyCode" id="captcha_changedHere" href="#">换一张</a>
+						<a class="changeVerifyCode" id="captcha_changeTipsHere" href="#">换一张</a>
 					</div>
 				</div>
 				<div class="toolBar">
