删除阿里云各种云存储

--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -13,7 +13,7 @@
 			<div class="w960 oh">
 				<a href="#" class="fl mt10"><img src="../../filecoin/register/images/logo.png" alt="logo" /></a>
 				<nav id="navs" class="fr">
-					<a href="index.html">首页</a>
+					<a href="../../index.html">首页</a>
 					<a href="/modules/filecoin/regist.html" class="active">注册</a>
 					<a href="/modules/filecoin/login.html">登录</a>
 				</nav>
@@ -259,7 +259,7 @@
         step = plaintext.split("#")[0];
         userId = plaintext.split("#")[1];
     }
-    alert(step+"--"+userId);
+//    alert(step+"--"+userId);
 
 
     var globleIndex = 0;
