--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -116,7 +116,7 @@
 					<p class="c7b mt20">没有收到邮件？</p>
 					<p>1. 请检查邮箱地址是否正确，你可以返回 <a href="#" onclick="RegistFunc.getEditMailUser();" class="c46">重新填写</a></p>
 					<p>2. 检查你的邮件垃圾箱</p>
-					<p>3. 若仍未收到确认，请尝试 <a href="#" onclick="RegistFunc.resendMail(this);" class="c46">重新发送</a></p>
+					<p>3. 若仍未收到确认，请尝试 <a id="resendMailBtn" href="#" class="c46">重新发送</a></p>
 				</div>
 				<div class="clear"></div>
 			</div><!-- // step2 end -->
@@ -147,7 +147,7 @@
 					<label class="frm_label">手机验证码：</label>
 					<div class="frm_controls">
 						<input type="text" name="phoneYzm" id="phoneYzm"  class="frm_input phoneYzm"/>
-						<input type="button" value="获取验证码" class="btn btn_default" />
+						<input type="button" id="phoneYzm_changeTipsHere" value="获取验证码" class="btn btn_default" />
 					</div>
 				</div>
 				<div class="toolBar">
