--- a/src/main/resources/views/modules/filecoin/login.html
+++ b/src/main/resources/views/modules/filecoin/login.html
@@ -102,14 +102,14 @@
                                     <div class="form-group">
                                         <label class="form-label"></label>
                                         <div class="controls">
-                                            <a id="captchaImgId_cg" class="changeVerifyCode" href="#" onclick = "getCaptcha();">换一张</a>
+                                            <a id="captcha_changeTipsHere" class="changeVerifyCode" href="#">换一张</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-xs-12">
 
                                     <div class="pull-left">
-                                        <a href="javascript:void(0);" class="btn btn-primary mt-10 btn-corner right-15" onclick="doLoginBtn();">登录</a>
+                                        <a id="doLoginBtn" href="javascript:void(0);" class="btn btn-primary mt-10 btn-corner right-15">登录</a>
                                         <a href="/modules/filecoin/regist.html" class="btn mt-10 btn-corner signup">用户注册</a>
                                     </div>
 
@@ -143,7 +143,7 @@
     <script src="../../plugins/jsMap.js"></script>
     <script src="../../plugins/common.js"></script>
     <script src="../../plugins/public.js"></script>
-    <script src="../../js/modules/sys/login.js"></script>
+
     <!-- jQuery Validation plugin javascript-->
     <script src="../../plugins/jquery-validation/js/jquery.validate.js"></script>
     <!-- 自定义validation方法 -->
@@ -163,50 +163,13 @@
 
     <!-- CORE TEMPLATE JS - START -->
     <script src="../../filecoin/assets/js/scripts.js"></script>
+    <script src="../../plugins/jquery.params.js"></script>
+    <script src="../../plugins/crtptojs/crypto-js.js"></script>
+    <script src="../../js/modules/sys/login.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
 
     <script type="text/javascript">
         var ctx = "";
-        $(function(){
-            $("#msg_validate").validate({
-                rules: {
-                    username: {
-                        required: true
-                    },
-                    password: {
-                        required: true
-                    },
-                    captcha: {
-                        required: true
-                    }
-                },
-                messages: {
-                    username: {
-                        required: "请输入邮箱地址!"
-                    },
-                    password: {
-                        required: "请输入密码!"
-                    },
-                    captcha: {
-                        required: "请输入验证码!"
-                    }
-                }
-            });
-
-        });
-        function getCaptcha(){
-            $("#captchaImgId").attr("src","/captcha.jpg?t=" + $.now());
-        }
-        function doLoginBtn() {
-            $("#msg_validate").submit();
-        }
-
-        $.validator.setDefaults({
-            submitHandler: function () {
-                var jsonParam = Core.serializeJsonStr("msg_validate");
-                LoginFunc.doLogin(jsonParam);
-            }
-        });
     </script>
 </body>
 
