--- a/src/main/resources/views/modules/filecoin/security.html
+++ b/src/main/resources/views/modules/filecoin/security.html
@@ -301,7 +301,7 @@
                                                             <img src="../../filecoin/data/icons/email-verification.png" class="tab-img-icon" alt="icon">
                                                             <div class="tab-head">
                                                                 <h4 class="bold mb-5">邮箱认证</h4>
-                                                                <h4 class="no-mt"><small id="userMailInnerSmall">您认证的邮箱地址：79604722@qq.com 已通过认证！</small></h4>
+                                                                <h4 class="no-mt"><small id="userMailInnerSmall">您认证的邮箱地址： 已通过认证！</small></h4>
 
                                                                 <h5 class="bold no-mb"><i class="fa fa-check-circle-o complete f-s-14"></i> 已认证</h5>
                                                             </div>
@@ -312,10 +312,9 @@
                                                             <img src="../../filecoin/data/icons/phone-verification.png" class="tab-img-icon" alt="icon">
                                                             <div class="tab-head">
                                                               <h4 class="bold mb-5">手机身份认证</h4>
-                                                                <h4 class="no-mt"><small>未通过认证！</small></h4>
+                                                                <h4 class="no-mt"><small id="userPhoneSmall">您认证的手机号码： 已通过认证！</small></h4>
 
-                                                                <!--<h5 class="bold no-mb"><i class="fa fa-check-circle-o complete f-s-14"></i> 已认证</h5>-->
-                                                                <a href="#" class="btn btn-primary btn-corner right15"><i class="fa fa-cloud-download complete color-white"></i>尚未开放</a>
+                                                                <h5 class="bold no-mb"><i class="fa fa-check-circle-o complete f-s-14"></i> 已认证</h5>
 
                                                             </div>
                                               </div> 
