--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -1,4 +1,4 @@
-﻿﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
@@ -94,11 +94,11 @@
 					<div class="frm_controls verifycode">
 						<input type="text" id="captcha" name="captcha" class="frm_input verifyCode" maxlength="5"/>
 						<img id="captchaImgId" src="/captcha.jpg" alt="" />
-						<a class="changeVerifyCode" id="captcha_changeTipsHere" href="#">换一张</a>
+						<a class="changeVerifyCode" id="captcha_changeTipsHere" href="javascript:void(0);">换一张</a>
 					</div>
 				</div>
 				<div class="toolBar">
-					<a id="nextBtn" class="btn btn_primary" href="javascript:;">下一步</a>
+					<a id="nextBtn" class="btn btn_primary" href="javascript:void(0);">下一步</a>
 				</div>
 					<input type="hidden" name="userId" id="user_id" value=""/>
 					<input type="hidden" name="userMail" id="user_mail" value=""/>
@@ -111,12 +111,12 @@
 					<strong class="f16">感谢注册，确认邮件已发送至你的注册邮箱 : <br /><span id="registEmail"></span></strong>
 					<p class="c7b">请进入邮箱查看邮件，并激活IPFS星际云矿池帐号。</p>
 					<p>
-						<a class="btn btn_primary mt20" href="#" id="openMailUrlBtn">登录邮箱</a>
+						<a class="btn btn_primary mt20" href="javascript:void(0);" id="openMailUrlBtn">登录邮箱</a>
 					</p>
 					<p class="c7b mt20">没有收到邮件？</p>
-					<p>1. 请检查邮箱地址是否正确，你可以返回 <a href="#" id="editMailUserBtn" class="c46">重新填写</a></p>
+					<p>1. 请检查邮箱地址是否正确，你可以返回 <a href="javascript:void(0);" id="editMailUserBtn" class="c46">重新填写</a></p>
 					<p>2. 检查你的邮件垃圾箱</p>
-					<p>3. 若仍未收到确认，请尝试 <a id="resendMailBtn" href="#" class="c46">重新发送</a></p>
+					<p>3. 若仍未收到确认，请尝试 <a id="resendMailBtn" href="javascript:void(0);" class="c46">重新发送</a></p>
 				</div>
 				<div class="clear"></div>
 			</div><!-- // step2 end -->
@@ -151,7 +151,7 @@
 					</div>
 				</div>
 				<div class="toolBar">
-					<a id="nextBtn2" class="btn btn_primary" href="javascript:;">下一步</a>
+					<a id="nextBtn2" class="btn btn_primary" href="javascript:void(0);">下一步</a>
 				</div>
 				</form>
 			</div><!-- // step3 end -->
@@ -186,8 +186,12 @@
 						<div id="demo">
 
 
-
-							<div class="i_box"><a href="javascript:;" class="J_minus">-</a><input type="text" id="storageLen" name="storageLen" value="0" class="J_input storageLen" /><a href="javascript:;" class="J_add">+</a></div>
+							<div class="i_box"><a href="javascript:void(0);" class="J_minus">-</a><input type="text"
+																										 id="storageLen"
+																										 name="storageLen"
+																										 value="0"
+																										 class="J_input storageLen"/><a
+									href="javascript:void(0);" class="J_add">+</a></div>
 
 
 
@@ -204,7 +208,7 @@
 					</div>
 				</div>
 				<div class="toolBar">
-					<a id="finishedBtn" class="btn btn_primary" href="javascript:;">完成</a>
+					<a id="finishedBtn" class="btn btn_primary" href="javascript:void(0);">完成</a>
 				</div>
 				</form>
 			</div>
@@ -212,7 +216,7 @@
 			<div id="step5" class="step hide">
 				<div class="w330">
 					<strong class="f16">感谢注册成为内测用户，您的邀请码为 : </strong>
-					<p><a class="btncode btn_primary mt20" href="javascript:;" id="invitationCodeA"></a></p>
+					<p><a class="btncode btn_primary mt20" href="javascript:void(0);" id="invitationCodeA"></a></p>
 					<p>1. 关注微信公众号</p>
 					<p>2. 加入矿池QQ群：22138062</p>
 				</div>
