--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="filecoin/css/menu.css">
   <link rel="stylesheet" type="text/css" href="filecoin/css/style.css">
   <link rel="stylesheet" type="text/css" href="filecoin/css/owl.carousel.css">
-  <link rel="shortcut icon" href="filecoin/images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="filecoin/assets/images/favicon.png" type="image/x-icon"/>
 
 </head>
 
