--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -94,7 +94,8 @@
 					<div class="frm_controls verifycode">
 						<input type="text" id="captcha" name="captcha" class="frm_input verifyCode" maxlength="5"/>
 						<img id="captchaImgId" src="/captcha.jpg" alt="" />
-						<a class="changeVerifyCode" id="captcha_changeTipsHere" href="javascript:void(0);">换一张</a>
+						<a class="changeVerifyCode" style="color: #0a0a0a" id="captcha_changeTipsHere"
+						   href="javascript:void(0);">换一张</a>
 					</div>
 				</div>
 				<div class="toolBar">
