1.更换js位置 2.记录日志时,不记录明文密码到数据库

--- a/src/main/resources/views/modules/filecoin/login.html
+++ b/src/main/resources/views/modules/filecoin/login.html
@@ -170,7 +170,7 @@
 <script src="../../filecoin/assets/js/scripts.js"></script>
 <script src="../../plugins/jquery.params.js"></script>
 <script src="../../plugins/crtptojs/crypto-js.js"></script>
-<script src="../../js/modules/sys/login.js"></script>
+<script src="../../js/modules/filecoin/login.js"></script>
 <!-- END CORE TEMPLATE JS - END -->
 
 <script type="text/javascript">
