--- a/src/main/resources/views/modules/filecoin/my-wallet.html
+++ b/src/main/resources/views/modules/filecoin/my-wallet.html
@@ -521,7 +521,7 @@
     <script src="../../plugins/jsMap.js"></script>
     <script src="../../plugins/common.js"></script>
     <script src="../../plugins/public.js"></script>
-    <script src="../../js/modules/sys/login.js"></script>
+
     <!-- jQuery Validation plugin javascript-->
     <script src="../../plugins/jquery-validation/js/jquery.validate.js"></script>
     <!-- 自定义validation方法 -->
@@ -531,7 +531,7 @@
     <script src="../../plugins/jquery-validation/form-validate-demo.js"></script>
 
     <!-- 登录js -->
-    <script src="../../js/modules/sys/login.js"></script>
+    <script src="../../js/modules/filecoin/login.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
     <script >
         var ctx = "";
