--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -241,7 +241,7 @@
 <script src="../../plugins/jsMap.js"></script>
 <script src="../../plugins/common.js"></script>
 <script src="../../plugins/public.js"></script>
-<script src="../../js/modules/sys/login.js"></script>
+<!--<script src="../../js/modules/filecoin/login.js"></script>-->
 <!-- jQuery Validation plugin javascript-->
 <script src="../../plugins/jquery-validation/js/jquery.validate.js"></script>
 <!-- 自定义validation方法 -->
@@ -258,6 +258,6 @@
     var userId = "";
     var globleIndex = 0;
 </script>
-<script src="../../js/modules/sys/regist.js"></script>
+<script src="../../js/modules/filecoin/regist.js"></script>
 </body>
 </html>
