注册页面修改

--- a/src/main/resources/views/modules/filecoin/regist.html
+++ b/src/main/resources/views/modules/filecoin/regist.html
@@ -72,7 +72,7 @@
 					<label class="frm_label">内测邀请码</label>
 					<div class="frm_controls">
 						<input type="text" id="vcode" name="vcode" class="frm_input " maxlength="6" value=""/>
-						<p class="changeVerifyCode">您必须输入邀请码才能注册。如没有请加QQ群：22138062 获取。</p>
+						<p class="changeVerifyCode" id="needCliekP">您必须输入邀请码才能注册。如没有请加QQ群：22138062 获取。</p>
 					</div>
 				</div>
 
@@ -241,7 +241,7 @@
 <script src="../../plugins/jsMap.js"></script>
 <script src="../../plugins/common.js"></script>
 <script src="../../plugins/public.js"></script>
-<!--<script src="../../js/modules/filecoin/login.js"></script>-->
+<script src="../../js/modules/filecoin/login.js"></script>
 <!-- jQuery Validation plugin javascript-->
 <script src="../../plugins/jquery-validation/js/jquery.validate.js"></script>
 <!-- 自定义validation方法 -->
