修改filecoin 下 controller的requestMapping,原因是与静态页目录冲突了,全不在权限验证范围内了

--- a/src/main/resources/views/index.html
+++ b/src/main/resources/views/index.html
@@ -334,6 +334,13 @@
             window.location.hash = hash;
         });
     });
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?6beaad5d2a7d4de50e00d613ae744d30";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
 </script>
 <!-- =====  SCRIPT END  ===== -->
 </body>
