去掉首页推广有礼class="open"

--- a/src/main/resources/views/modules/filecoin/index-dashboard.html
+++ b/src/main/resources/views/modules/filecoin/index-dashboard.html
@@ -247,7 +247,7 @@
                     </a>
                 </li>
 
-                <li class="open">
+                <li class="">
                     <a href="highway.html">
                         <i class="fa fa-comments"></i>
                         <span class="title">推广有礼</span>
